--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "author": "Graasp",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "contributors": [
     "Hagop Taminian",
@@ -17,19 +17,20 @@
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@graasp/query-client": "1.4.3",
-    "@graasp/sdk": "1.2.1",
-    "@graasp/translations": "1.18.3",
-    "@graasp/ui": "3.5.1",
+    "@graasp/query-client": "2.0.1",
+    "@graasp/sdk": "2.0.0",
+    "@graasp/translations": "1.19.4",
+    "@graasp/ui": "4.0.0",
     "@mui/icons-material": "5.14.6",
     "@mui/lab": "5.0.0-alpha.141",
     "@mui/material": "5.14.6",
     "@sentry/react": "7.72.0",
     "google-map-react": "2.2.1",
     "http-status-codes": "2.3.0",
-    "i18next": "23.4.4",
-    "immutable": "4.3.2",
+    "i18next": "23.6.0",
     "lodash.capitalize": "4.2.1",
+    "lodash.countby": "4.6.0",
+    "lodash.groupby": "4.6.0",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
     "miragejs": "0.1.47",
@@ -37,7 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga4": "2.1.0",
-    "react-i18next": "13.1.2",
+    "react-i18next": "13.3.1",
     "react-router-dom": "6.15.0",
     "react-toastify": "9.1.3",
     "recharts": "2.8.0",
@@ -94,6 +95,8 @@
     "@types/google-map-react": "2.1.7",
     "@types/jest": "29.5.3",
     "@types/lodash.capitalize": "4.2.7",
+    "@types/lodash.countby": "4.6.8",
+    "@types/lodash.groupby": "4.6.8",
     "@types/lodash.truncate": "4.4.7",
     "@types/node": "18.18.0",
     "@typescript-eslint/eslint-plugin": "6.7.5",
