--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@graasp/query-client": "2.2.3",
+    "@graasp/query-client": "2.3.2",
     "@graasp/sdk": "3.4.1",
     "@graasp/translations": "1.22.0",
     "@graasp/ui": "4.3.1",
@@ -63,7 +63,7 @@
     "pre-commit": "yarn prettier:check && yarn lint && yarn type-check",
     "hooks:uninstall": "husky uninstall",
     "hooks:install": "husky install",
-    "type-check": "tsc --noEmit && tsc --noEmit -p cypress/tsconfig.json",
+    "type-check": "tsc --noEmit -p tsconfig.eslint.json",
     "check": "yarn prettier:check && yarn lint && yarn type-check",
     "test": "yarn build:test && concurrently -k -s first \"yarn preview:test\" \"yarn cypress:run\"",
     "cypress": "yarn test",
@@ -102,6 +102,7 @@
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
     "@vitejs/plugin-react": "4.2.1",
+    "concurrently": "8.2.2",
     "cross-env": "7.0.3",
     "cypress": "13.6.2",
     "env-cmd": "10.1.0",
