--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -39,6 +39,7 @@ jobs:
           VITE_GRAASP_API_HOST: 'http://localhost:3000'
           VITE_ENABLE_MOCK_API: true
           VITE_PORT: 3113
+          VITE_VERSION: cypress-test
 
       #  use the Cypress GitHub Action to run Cypress tests within the chrome browser
       - name: Cypress run
@@ -55,6 +56,7 @@ jobs:
           VITE_GRAASP_API_HOST: 'http://localhost:3000'
           VITE_ENABLE_MOCK_API: true
           VITE_PORT: 3113
+          VITE_VERSION: cypress-test
 
       # after the test run completes
       # store any screenshots
