--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@graasp/query-client": "2.5.0",
-    "@graasp/sdk": "3.6.0",
+    "@graasp/query-client": "2.6.0",
+    "@graasp/sdk": "3.8.0",
     "@graasp/translations": "1.23.0",
-    "@graasp/ui": "4.6.0",
-    "@mui/icons-material": "5.15.6",
+    "@graasp/ui": "4.7.0",
+    "@mui/icons-material": "5.15.10",
     "@mui/lab": "5.0.0-alpha.141",
-    "@mui/material": "5.15.6",
-    "@sentry/react": "7.99.0",
+    "@mui/material": "5.15.10",
+    "@sentry/react": "7.101.0",
     "google-map-react": "2.2.1",
     "http-status-codes": "2.3.0",
     "i18next": "23.7.16",
@@ -42,7 +42,7 @@
     "react-i18next": "13.5.0",
     "react-router-dom": "6.22.0",
     "react-toastify": "10.0.4",
-    "recharts": "2.11.0",
+    "recharts": "2.12.0",
     "stylis": "4.3.1",
     "stylis-plugin-rtl": "2.1.1",
     "supercluster": "8.0.1",
@@ -61,17 +61,17 @@
     "preview:test": "vite preview --mode test",
     "lint": "eslint .",
     "pre-commit": "yarn prettier:check && yarn lint && yarn type-check",
-    "hooks:uninstall": "husky uninstall",
-    "hooks:install": "husky install",
+    "hooks": "husky",
+    "analyze-bundle": "npx vite-bundle-visualizer",
     "type-check": "tsc --noEmit -p tsconfig.eslint.json",
     "check": "yarn prettier:check && yarn lint && yarn type-check",
     "test": "yarn build:test && concurrently -k -s first \"yarn preview:test\" \"yarn cypress:run\"",
     "cypress": "yarn test",
     "cypress:open": "env-cmd -f ./.env.test cypress open --browser chrome",
-    "cypress:run": "env-cmd -f ./.env.test cypress run --headless --browser chrome",
+    "cypress:run": "env-cmd -f ./.env.test cypress run --browser chrome",
     "prettier:check": "prettier --check 'src/**/*.{js,tsx,ts}'",
     "prettier:write": "prettier --write 'src/**/*.{js,tsx,ts}'",
-    "postinstall": "husky install"
+    "postinstall": "husky"
   },
   "browserslist": {
     "production": [
@@ -86,9 +86,7 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "18.6.0",
-    "@commitlint/config-conventional": "18.6.0",
-    "@cypress/code-coverage": "3.12.20",
+    "@cypress/code-coverage": "3.12.22",
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "14.5.2",
@@ -99,8 +97,8 @@
     "@types/lodash.groupby": "4.6.9",
     "@types/lodash.truncate": "4.4.9",
     "@types/node": "20.11.17",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.0.1",
+    "@typescript-eslint/parser": "7.0.1",
     "@vitejs/plugin-react": "4.2.1",
     "concurrently": "8.2.2",
     "cross-env": "7.0.3",
@@ -113,13 +111,12 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "husky": "9.0.10",
+    "husky": "9.0.11",
     "istanbul-lib-coverage": "3.2.2",
     "nyc": "15.1.0",
     "prettier": "3.2.5",
-    "rollup-plugin-visualizer": "5.12.0",
     "typescript": "5.3.3",
-    "vite": "5.0.12",
+    "vite": "5.1.1",
     "vite-plugin-checker": "0.6.4",
     "vite-plugin-istanbul": "5.0.0"
   },
