--- a/package.json
+++ b/package.json
@@ -18,31 +18,30 @@
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@graasp/query-client": "2.6.0",
-    "@graasp/sdk": "3.8.0",
-    "@graasp/translations": "1.23.0",
-    "@graasp/ui": "4.7.0",
-    "@mui/icons-material": "5.15.10",
+    "@graasp/query-client": "2.7.1",
+    "@graasp/sdk": "4.0.1",
+    "@graasp/translations": "1.25.2",
+    "@graasp/ui": "4.8.3",
+    "@mui/icons-material": "5.15.11",
     "@mui/lab": "5.0.0-alpha.141",
-    "@mui/material": "5.15.10",
-    "@sentry/react": "7.101.0",
+    "@mui/material": "5.15.11",
+    "@sentry/react": "7.103.0",
     "google-map-react": "2.2.1",
     "http-status-codes": "2.3.0",
-    "i18next": "23.7.16",
+    "i18next": "23.10.0",
     "lodash.capitalize": "4.2.1",
     "lodash.countby": "4.6.0",
     "lodash.groupby": "4.6.0",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
     "miragejs": "0.1.48",
-    "qs": "6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga4": "2.1.0",
-    "react-i18next": "13.5.0",
-    "react-router-dom": "6.22.0",
+    "react-i18next": "14.0.5",
+    "react-router-dom": "6.22.1",
     "react-toastify": "10.0.4",
-    "recharts": "2.12.0",
+    "recharts": "2.12.1",
     "stylis": "4.3.1",
     "stylis-plugin-rtl": "2.1.1",
     "supercluster": "8.0.1",
@@ -52,20 +51,20 @@
   "scripts": {
     "dev": "vite",
     "start": "yarn dev",
-    "start:test": "vite --mode test",
+    "start:test": "NODE_ENV=development vite --mode test",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "build:test": "vite build --mode test",
+    "build:test": "NODE_ENV=development vite build --mode test",
     "preview": "vite preview",
     "preview:dev": "vite preview --mode development",
-    "preview:test": "vite preview --mode test",
+    "preview:test": "NODE_ENV=development vite preview --mode test",
     "lint": "eslint .",
     "pre-commit": "yarn prettier:check && yarn lint && yarn type-check",
     "hooks": "husky",
     "analyze-bundle": "npx vite-bundle-visualizer",
     "type-check": "tsc --noEmit -p tsconfig.eslint.json",
     "check": "yarn prettier:check && yarn lint && yarn type-check",
-    "test": "yarn build:test && concurrently -k -s first \"yarn preview:test\" \"yarn cypress:run\"",
+    "test": "NODE_ENV=development yarn build:test && concurrently -k -s first \"yarn preview:test\" \"yarn cypress:run\"",
     "cypress": "yarn test",
     "cypress:open": "env-cmd -f ./.env.test cypress open --browser chrome",
     "cypress:run": "env-cmd -f ./.env.test cypress run --browser chrome",
@@ -86,7 +85,7 @@
     ]
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.12.22",
+    "@cypress/code-coverage": "3.12.26",
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "14.5.2",
@@ -96,15 +95,15 @@
     "@types/lodash.countby": "4.6.9",
     "@types/lodash.groupby": "4.6.9",
     "@types/lodash.truncate": "4.4.9",
-    "@types/node": "20.11.17",
-    "@typescript-eslint/eslint-plugin": "7.0.1",
-    "@typescript-eslint/parser": "7.0.1",
+    "@types/node": "20.11.20",
+    "@typescript-eslint/eslint-plugin": "7.1.0",
+    "@typescript-eslint/parser": "7.1.0",
     "@vitejs/plugin-react": "4.2.1",
     "concurrently": "8.2.2",
     "cross-env": "7.0.3",
-    "cypress": "13.6.4",
+    "cypress": "13.6.6",
     "env-cmd": "10.1.0",
-    "eslint": "8.56.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "9.1.0",
@@ -116,7 +115,7 @@
     "nyc": "15.1.0",
     "prettier": "3.2.5",
     "typescript": "5.3.3",
-    "vite": "5.1.1",
+    "vite": "5.1.4",
     "vite-plugin-checker": "0.6.4",
     "vite-plugin-istanbul": "5.0.0"
   },
