--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@graasp/query-client": "3.6.0",
-    "@graasp/sdk": "4.9.0",
+    "@graasp/query-client": "3.10.0",
+    "@graasp/sdk": "4.12.0",
     "@graasp/translations": "1.28.0",
     "@graasp/ui": "4.17.1",
     "@mui/icons-material": "5.15.16",
@@ -34,6 +34,7 @@
     "lodash.groupby": "4.6.0",
     "lodash.sortby": "4.7.0",
     "lodash.truncate": "4.4.2",
+    "lucide-react": "0.378.0",
     "miragejs": "0.1.48",
     "react": "18.3.1",
     "react-dom": "18.3.1",
