--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@graasp/query-client": "3.10.0",
+    "@graasp/query-client": "3.13.0",
     "@graasp/sdk": "4.12.0",
     "@graasp/translations": "1.28.0",
     "@graasp/ui": "4.17.1",
@@ -26,6 +26,7 @@
     "@mui/lab": "5.0.0-alpha.141",
     "@mui/material": "5.15.16",
     "@sentry/react": "7.113.0",
+    "date-fns": "3.6.0",
     "google-map-react": "2.2.1",
     "http-status-codes": "2.3.0",
     "i18next": "23.11.3",
@@ -37,6 +38,7 @@
     "lucide-react": "0.378.0",
     "miragejs": "0.1.48",
     "react": "18.3.1",
+    "react-date-range": "2.0.1",
     "react-dom": "18.3.1",
     "react-ga4": "2.1.0",
     "react-i18next": "14.1.1",
@@ -97,6 +99,7 @@
     "@types/lodash.groupby": "4.6.9",
     "@types/lodash.truncate": "4.4.9",
     "@types/node": "20.12.8",
+    "@types/react-date-range": "1.4.9",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "@vitejs/plugin-react": "4.2.1",
