--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@emotion/styled": "11.13.0",
     "@graasp/query-client": "3.22.2",
     "@graasp/sdk": "4.26.0",
-    "@graasp/stylis-plugin-rtl": "^2",
+    "@graasp/stylis-plugin-rtl": "2.2.0",
     "@graasp/translations": "1.35.1",
     "@graasp/ui": "https://github.com/lnco-epfl/graasp-ui#1-update-ui-for-lnco-graasp",
     "@mui/icons-material": "5.16.7",
