--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@graasp/sdk": "4.32.1",
     "@graasp/stylis-plugin-rtl": "2.2.0",
     "@graasp/translations": "1.39.0",
-    "@graasp/ui": "https://github.com/lnco-epfl/graasp-ui#1-layout-changes",
+    "@graasp/ui": "https://github.com/lnco-epfl/graasp-ui",
     "@mui/icons-material": "5.16.7",
     "@mui/lab": "5.0.0-alpha.141",
     "@mui/material": "5.16.7",
